pb accents